<resources>
    <string name="app_name">Личный кабинет студента ИжГТУ</string>
    <string name="welcome_text">Вход в личный кабинет</string>
    <string name="input">Войти</string>
    <string name="student_section">Кабинет студента</string>
    <string name="portfolio">Портфолио</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="portfolio_section">Портфолио</string>
    <string name="messenger_section">Сообщения</string>
    <string name="save">Сохранить</string>
    <string name="passport">Паспортные данные</string>
    <string name="inn">Инн</string>
    <string name="snils">Снилс</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="personal_data">Личные данные</string>
    <string name="Выйти">exit</string>
    <string name="form_a_statement">Сформировать заявление</string>
    <string name="error">Ошибка :(</string>
    <string name="loading_chat_state">Загрузка</string>

    <string name="empty_latest_message">Сообщений не найдено</string>
    <string name="connection_error">Ошибка связи. Нажмите чтобы попробовать снова!</string>
    <string name="empty_chat_history_message">История сообщений пуста. Начните диалог.</string>
    <string name="loading_chat_list_message">Списко контактов загружается</string>
    <string name="empty_contact_list">Список контактов пуст.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Номер телефона</string>
    <string name="news_section">Новости</string>
    <string name="notification_channel_name">FlickrFetchr</string>
    <string name="vk_news_error">Для отображения новостей нужно авторизоваться ВКонтакте.</string>
    <string name="css_section">Связь с КСС</string>
    <string name="istu_post_hint">#мнение@kss_istu ⚡ Атмосфера доверия ⚡ Сообщество сотрудников воспитательных направлений вузов страны проводит изучение мнения студентов об атмосфере доверия. 📌 Анализ данной анкеты позволит сформулировать предложения по улучшению работы для вышестоящих организаций. ❗ Анкета полностью анонимная, поэтому отвечайте максимально откровенно. ✨ Подобные опросы и анкетирования позволяют видеть ситуацию шире и решать проблемы на начальных этапах. _______________________________________ 📝 Анкета: https://docs.google.com/forms/d/e/1FAIpQLSfKldYuMuBui..</string>
    <string name="date_hint">16.01.1999 14:400</string>
    <string name="message_hint">Сообщение</string>

</resources>