<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/messenger_section" />-->
        <item
            android:id="@+id/nav_student_office"
            android:icon="@drawable/ic_user"
            android:title="@string/personal_data" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_portfolio"
            android:title="@string/portfolio_section" />
        <item
            android:id="@+id/nav_messenger"
            android:icon="@drawable/ic_message_cloud"
            android:title="@string/messenger_section" />
        <item
            android:id="@+id/nav_css"
            android:icon="@drawable/ic_css"
            android:title="@string/css_section"
        />


    </group>
</menu>