<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_student">

    <fragment
        android:id="@+id/nav_student"
        android:name="com.chistoedet.android.istustudents.ui.main.studentOffice.StudentOfficeFragment"
        android:label="@string/student_section"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.chistoedet.android.istustudents.ui.main.portfolio.PortfolioFragment"
        android:label="@string/portfolio_section"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_messenger"
        android:name="com.chistoedet.android.istustudents.ui.main.messenger.list.ContactListFragment"
        android:label="@string/messenger_section"
        tools:layout="@layout/fragment_contact_list" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.chistoedet.android.istustudents.ui.main.messenger.list.ContactListFragment"
        android:label="@string/messenger_section"
        tools:layout="@layout/fragment_contact_list" />

</navigation>