<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            style="@style/GrayCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:minWidth="160dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                tools:viewBindingIgnore="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passport" />

            <EditText
                android:id="@+id/passport_et"
                android:inputType="numberSigned"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inn" />

            <EditText
                android:id="@+id/INN_et"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/snils" />

            <EditText
                android:id="@+id/SNILS_et"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number" />

            <EditText
                android:id="@+id/number_et"
                android:inputType="phone"
                android:background="@drawable/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="100dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_below="@+id/profile_card"
            android:id="@+id/save_btn"
            android:text="@string/save"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

</RelativeLayout>